--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;500&display=swap");
 html {
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
@@ -9,11 +10,11 @@ html {
 	box-sizing: inherit;
 }
 
-* {
+ /* * {
   padding: 0px;
   margin: 0px;
   border: none;
-}
+} */
 :focus,
 :active {
   outline: none;
@@ -41,17 +42,20 @@ input[type="submit"] {
   background-color: transparent;
   background: none;
   cursor: pointer;
-}
+}  
 
-#root {
+ #root {
+	width: 100%;
   margin: 0, auto;
   padding: 20px;
-}
+} 
 
 .app {
+	width: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
+  align-items: center;
 }
 
 .pinterest-board__content_hover:hover .position{
@@ -66,8 +70,6 @@ input[type="submit"] {
 .dropdown-content button:hover {background-color: #ddd;}
   
 .dropdown:hover .dropdown-content {display: flex;}
-
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;500&display=swap");
 /* кнопка Главная */
 #header-main-button {
   background-color: rgb(32, 30, 30);
