--- a/src/components/common/button/button.css
+++ b/src/components/common/button/button.css
@@ -1,74 +1,81 @@
 /* кнопка Главная */
 #header-main-button {
-  background-color: rgb(32, 30, 30);
-  color: white;
-  font-family: "Raleway", sans-serif;
-  font-size: 15px;
-  font-weight: 500;
-  border-radius: 30px;
-  min-width: 155px;
-  height: 50px;
-  text-align: center;
-  margin: auto 10px;
-  display: inline-block;
-}
-#header-main-button:hover {
-  background-color: black;
-}
-
-/* Кнопка выбрать доски */
-.header-button-board {
-  background-color: rgb(32, 30, 30);
-  color: white;
-  font-family: "Raleway", sans-serif;
-  font-size: 15px;
-  font-weight: 500;
-  border-radius: 30px;
-  min-width: 170px;
-  height: 50px;
-  text-align: center;
-  margin: auto 10px;
-  position: relative;
-  display: inline-block;
-}
-.header-button-board:hover {
-  background-color: black;
-}
-/* Выпадающий список досок */
-.header-dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: rgb(32, 30, 30);
-  min-width: 170px;
-  z-index: 1;
-  margin: auto 10px;
-  font-family: "Raleway", sans-serif;
-  flex-direction: column;
-  align-items: center;
-  border-bottom-right-radius: 30px;
-  border-bottom-left-radius: 30px;
-}
-
-.header-dropdown-content button {
-  color: white;
-  font-size: 14px;
-  font-weight: 500;
-  text-align: center;
-  display: block;
-  height: 50px;
-  font-family: "Raleway", sans-serif;
-}
-.header-dropdown-content :last-child {
-  margin-bottom: 10px;
-}
-.header-dropdown-content button:hover {
-  color: rgb(203, 203, 203);
-}
-
-.show {
-  display: flex;
-}
-.border {
-  border-bottom-left-radius: 0px;
-  border-bottom-right-radius: 0px;
-}
+	background-color: rgb(32, 30, 30);
+	color: white;
+	font-family: "Raleway", sans-serif;
+	font-size: 15px;
+	font-weight: 500;
+	border-radius: 30px;
+	min-width: 155px;
+	height: 50px;
+	text-align: center;
+	margin: auto 10px;
+	display: inline-block;
+  }
+  #header-main-button:hover {
+	background-color: black;
+  }
+  
+  /* Кнопка выбрать доски */
+  .header-button-board {
+	background-color: rgb(32, 30, 30);
+	color: white;
+	font-family: "Raleway", sans-serif;
+	font-size: 15px;
+	font-weight: 500;
+	border-radius: 30px;
+	min-width: 170px;
+	height: 50px;
+	text-align: center;
+	margin: auto 10px;
+	position: relative;
+	display: inline-block;
+  }
+  .header-button-board:hover {
+	background-color: black;
+  }
+  /* Выпадающий список досок */
+  .header-dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: rgb(32, 30, 30);
+	min-width: 170px;
+	z-index: 1;
+	margin: auto 10px;
+	font-family: "Raleway", sans-serif;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+		-ms-flex-direction: column;
+			flex-direction: column;
+	-webkit-box-align: center;
+		-ms-flex-align: center;
+			align-items: center;
+	border-bottom-right-radius: 30px;
+	border-bottom-left-radius: 30px;
+  }
+  
+  .header-dropdown-content button {
+	color: white;
+	font-size: 14px;
+	font-weight: 500;
+	text-align: center;
+	display: block;
+	height: 50px;
+	font-family: "Raleway", sans-serif;
+  }
+  .header-dropdown-content :last-child {
+	margin-bottom: 10px;
+  }
+  .header-dropdown-content button:hover {
+	color: rgb(203, 203, 203);
+  }
+  
+  .show {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+  }
+  .border {
+	border-bottom-left-radius: 0px;
+	border-bottom-right-radius: 0px;
+  }
