--- a/src/components/pin/pin.css
+++ b/src/components/pin/pin.css
@@ -1,7 +1,12 @@
 .pinterest-board__item {
 	max-width: 250px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 }
 
 .pinterest-board__content {
@@ -21,8 +26,12 @@
 	display: none;
 	position: absolute;
 	cursor: pointer;
-	justify-content: center;
-	align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 
 	font-size: 36px;
 	width: 45px;
@@ -39,8 +48,12 @@
 }
 
 .pinterest-board__info {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	padding-left: 10px;
 	padding-top: 10px;
 }
@@ -73,9 +86,15 @@
 	right: 15px;
 }
 .dropbtn {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	width: 45px;
 	height: 45px;
 	border-radius: 50%;
@@ -94,13 +113,17 @@
 	position: absolute;
 	left: -160px;
 	display: none;
-	flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 	position: absolute;
 	border: 1px solid orange;
 	border-radius: 10px;
 	background-color: #f1f1f1;
 	min-width: 250px;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	-webkit-box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	z-index: 999;
   }
   
