--- a/src/components/pins-board/pins-board.css
+++ b/src/components/pins-board/pins-board.css
@@ -2,6 +2,7 @@
 	max-width: 100%;
 	display: flex;
 	justify-content: center;
+	align-items: center;
 	flex-wrap: wrap;
 	column-gap: 25px;
 	row-gap: 25px;
