--- a/src/index.css
+++ b/src/index.css
@@ -1,100 +1,126 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@100;500&display=swap");
 html {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  height: 100%;
-}
-
-*,
-*::before,
-*::after {
-  -webkit-box-sizing: inherit;
-  box-sizing: inherit;
-}
-
- /* * {
-  padding: 0px;
-  margin: 0px;
-  border: none;
-} */
-:focus,
-:active {
-  outline: none;
-}
-a:focus,
-a:active {
-  outline: none;
-}
-a:hover {
-  text-decoration: none;
-}
-input,
-textarea,
-button,
-select {
-  font-family: inherit;
-  font-size: inherit;
-  color: inherit;
-  background-color: transparent;
-}
-button,
-input[type="submit"] {
-  display: inline-block;
-  box-shadow: none;
-  background-color: transparent;
-  background: none;
-  cursor: pointer;
-}  
-
-
-#root {
-  padding: 20px;
-  display: flex;
-  justify-content: center;
-}
-
-.app {
-	width: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.pinterest-board__content_hover:hover .position {
-  display: flex;
-}
-
-.dropdown-content button:hover {background-color: #ddd;}
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	height: 100%;
+  }
   
-.dropdown:hover .dropdown-content {display: flex;}
+  *,
+  *::before,
+  *::after {
+	-webkit-box-sizing: inherit;
+	box-sizing: inherit;
+  }
 
-/* кнопка Главная */
-#header-main-button {
-  background-color: rgb(32, 30, 30);
-  color: white;
-  font-family: "Raleway", sans-serif;
-  font-size: 15px;
-  font-weight: 500;
-  border-radius: 30px;
-  min-width: 155px;
-  height: 50px;
-  text-align: center;
-  margin: auto 10px;
-  display: inline-block;
+ body{
+	width: 100%;
 }
-#header-main-button:hover {
-  background-color: black;
- }
- 
-.pinterest-board__content_hover:hover .pinterest-board__hover-menu {
-  display: block;
-  background-color: rgba(147, 147, 147, 0.5);
+  
+* {
+	padding: 0px;
+	margin: 0px;
+	border: none;
 }
 
-.dropdown-content button:hover {
-  background-color: #ddd;
-}
-
-.dropdown:hover .dropdown-content {
-  display: flex;
+  :focus,
+  :active {
+	outline: none;
+  }
+  a:focus,
+  a:active {
+	outline: none;
+  }
+  a:hover {
+	text-decoration: none;
+  }
+  input,
+  textarea,
+  button,
+  select {
+	font-family: inherit;
+	font-size: inherit;
+	color: inherit;
+	background-color: transparent;
+  }
+  button,
+  input[type="submit"] {
+	display: inline-block;
+	-webkit-box-shadow: none;
+			box-shadow: none;
+	background-color: transparent;
+	background: none;
+	cursor: pointer;
+  } 
+  
+  
+  #root {
+	padding: 20px;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+		-ms-flex-pack: center;
+			justify-content: center;
+  }
+  
+  .app {
+	  max-width: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+		-ms-flex-pack: center;
+			justify-content: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+		-ms-flex-direction: column;
+			flex-direction: column;
+  }
+  
+  .pinterest-board__content_hover:hover .position {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+  }
+  
+  .dropdown-content button:hover {background-color: #ddd;}
+	
+  .dropdown:hover .dropdown-content {display: -webkit-box;display: -ms-flexbox;display: flex;}
+  
+  /* кнопка Главная */
+  #header-main-button {
+	background-color: rgb(32, 30, 30);
+	color: white;
+	font-family: "Raleway", sans-serif;
+	font-size: 15px;
+	font-weight: 500;
+	border-radius: 30px;
+	min-width: 155px;
+	height: 50px;
+	text-align: center;
+	margin: auto 10px;
+	display: inline-block;
+  }
+  #header-main-button:hover {
+	background-color: black;
+   }
+   
+  .pinterest-board__content_hover:hover .pinterest-board__hover-menu {
+	display: block;
+	background-color: rgba(147, 147, 147, 0.5);
+  }
+  
+  .dropdown-content button:hover {
+	background-color: #ddd;
+  }
+  
+  .dropdown:hover .dropdown-content {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+  }
+  @media (max-width:420px) and (min-width:320px){
+	.header{
+		flex-direction: column;
+	}
 }
