--- a/src/components/pins-board/pins-board.css
+++ b/src/components/pins-board/pins-board.css
@@ -1,8 +1,9 @@
 .pinterest-board {
-	max-width: 100%;
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-	column-gap: 25px;
-	row-gap: 25px;
+  max-width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  column-gap: 25px;
+  row-gap: 25px;
 }
