--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,11 @@ html {
   box-sizing: inherit;
 }
 
- /* * {
+* {
   padding: 0px;
   margin: 0px;
   border: none;
-} */
+}
 :focus,
 :active {
   outline: none;
@@ -44,8 +44,7 @@ input[type="submit"] {
   background-color: transparent;
   background: none;
   cursor: pointer;
-}  
-
+}
 
 #root {
   padding: 20px;
@@ -54,7 +53,7 @@ input[type="submit"] {
 }
 
 .app {
-	width: 100%;
+  width: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -64,9 +63,13 @@ input[type="submit"] {
   display: flex;
 }
 
-.dropdown-content button:hover {background-color: #ddd;}
-  
-.dropdown:hover .dropdown-content {display: flex;}
+.dropdown-content button:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: flex;
+}
 
 /* кнопка Главная */
 #header-main-button {
@@ -84,8 +87,8 @@ input[type="submit"] {
 }
 #header-main-button:hover {
   background-color: black;
- }
- 
+}
+
 .pinterest-board__content_hover:hover .pinterest-board__hover-menu {
   display: block;
   background-color: rgba(147, 147, 147, 0.5);
