--- a/src/components/common/input/input.css
+++ b/src/components/common/input/input.css
@@ -6,7 +6,7 @@
   font-size: 14px;
   font-weight: 100;
   border-radius: 30px;
-  min-width: 60vw;
+  width: 100%;
   height: 50px;
   text-align: center;
   margin: auto 10px;
