--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,10 +1,35 @@
 .header {
-	max-width: 100%;
+	/* max-width: 100%; */
 	display: -webkit-box;
 	display: -ms-flexbox;
-	display: flex;
 	-webkit-box-pack: justify;
 		-ms-flex-pack: justify;
 			justify-content: space-between;
-	margin-bottom: 30px;
+	
+	-webkit-box-align: center;
+	
+	    -ms-flex-align: center;
+	
+	        align-items: center;
+	justify-content: space-between;
+    align-items: center;
+    /* flex-direction: column; */
+    margin: 0 -5px 30px;
+    display: flex;
+    row-gap: 15px
   }
+
+  .header-item{
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	width: 100%;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-webkit-box-flex:1;
+	    -ms-flex:1 1 auto;
+	        flex:1 1 auto;
+	margin: 0 5px;
+  }
+
