--- a/src/components/pins-board/pins-board.css
+++ b/src/components/pins-board/pins-board.css
@@ -1,9 +1,18 @@
 .pinterest-board {
 	max-width: 100%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-wrap: wrap;
-	column-gap: 25px;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-webkit-column-gap: 25px;
+	   -moz-column-gap: 25px;
+	        column-gap: 25px;
 	row-gap: 25px;
 }
